<resources>
    <string name="app_name">EasyCV</string>
    <string name="title_profile">Profile</string>
    <string name="title_education">Education</string>
    <string name="title_skills">Skills</string>
    <string name="title_experience">Experience</string>
    <string name="title_export">Export</string>
    <string name="label_name">Name</string>
    <string name="label_lastname">Lastname</string>
    <string name="label_birthdate">Date of Birth</string>
    <string name="label_email">E-Mail</string>
    <string name="label_address">Address</string>
    <string name="label_phone">Phone</string>
    <string name="label_about">About me</string>
    <string name="not_data_found">Oops, no data found!</string>
    <string name="title_basic_info">Edit Basic Information</string>
    <string name="label_button_save">Save</string>
    <string name="title_edit_address">Edit Address</string>
    <string name="label_button_continue">continue</string>
    <string name="label_street">Street</string>
    <string name="label_city">City</string>
    <string name="label_zip">ZIP</string>
    <string name="label_country">Country</string>
    <string name="min_length">At least %1$s characters</string>
    <string name="max_length">At most %1$s characters</string>
    <string name="profile_data_updated">Profile data successfully updated!</string>
    <string name="label_button_export">Export</string>
</resources>
