<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.zuehlke.training.easycv.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_experience"
        android:name="com.zuehlke.training.easycv.ui.experience.ExperienceFragment"
        android:label="@string/title_experience"
        tools:layout="@layout/fragment_experience" />

    <fragment
        android:id="@+id/navigation_education"
        android:name="com.zuehlke.training.easycv.ui.education.EducationFragment"
        android:label="@string/title_education"
        tools:layout="@layout/fragment_education" />

    <fragment
        android:id="@+id/navigation_skills"
        android:name="com.zuehlke.training.easycv.ui.skills.SkillsFragment"
        android:label="@string/title_skills"
        tools:layout="@layout/fragment_skills" />
    <fragment
        android:id="@+id/navigation_export"
        android:name="com.zuehlke.training.easycv.ui.export.ExportFragment"
        android:label="@string/title_export"
        tools:layout="@layout/fragment_export" />
</navigation>
