<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/label_name"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_person_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLastname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputName"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/label_lastname"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_person_outline_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputBirthdate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputLastname"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/label_birthdate"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_cake_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputBirthdate"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/label_phone"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_call_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputPhone"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/label_email"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_email_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputAbout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/inputEmail"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/label_about"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAbout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputAbout"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_button_save" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>