<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_profile"
    android:id="@+id/profile_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBaseline_toBaselineOf="@id/lblNameLabel"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="John" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblLastnameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_lastname"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblNameLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBaseline_toBaselineOf="@id/lblLastnameLabel"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            tools:text="Smith" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblBirthdateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_birthdate"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblLastnameLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblBirthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBaseline_toBaselineOf="@id/lblBirthdateLabel"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            tools:text="21.02.2001" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_email"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblBirthdateLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBaseline_toBaselineOf="@id/lblEmailLabel"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            tools:text="john.smith@example.com" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblPhoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_phone"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblEmailLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBaseline_toBaselineOf="@id/lblPhoneLabel"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            tools:text="+41 79 123 43 42" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_address"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblPhoneLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBaseline_toBaselineOf="@id/lblAddressLabel"
            app:layout_constraintStart_toEndOf="@+id/labelBarrier"
            tools:text="St. Blabla Street \n8010 Zurich" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/labelBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="lblNameLabel,lblBirthdateLabel,lblLastnameLabel,lblEmailLabel,lblPhoneLabel,lblAddressLabel, lblAboutLabel" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/addressBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="lblAddressLabel,lblAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblAboutLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_about"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressBarrier" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblAboutLabel"
            tools:text="I am a very good programer and a passionate cook and baker. I do have some hobbies." />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>